--- a/fighting.html
+++ b/fighting.html
@@ -4,16 +4,24 @@
 <meta charset="utf-8">
 <title>Color-Chaser Snake — Chromebook</title>
 <style>
-:root{--bg:#000;--fg:#fff;--box:#111}
-html,body{margin:0;padding:0;height:100%;background:var(--bg);color:var(--fg);font-family:Arial,Helvetica,sans-serif;display:flex;justify-content:center;align-items:center;overflow:hidden;}
-canvas{background:#111;border:2px solid #fff;border-radius:6px;display:block;}
-.menu{position:absolute;top:0;left:0;width:100%;height:100%;display:flex;flex-direction:column;justify-content:center;align-items:center;gap:10px;background:rgba(0,0,0,0.85);}
-.menu button{padding:10px 20px;font-size:16px;border-radius:6px;border:1px solid #fff;background:transparent;color:#fff;cursor:pointer;}
-.menu .points{font-size:16px;}
-#skinSelect{margin-top:5px;padding:5px;font-size:16px;border-radius:6px;border:1px solid #fff;background:#000;color:#fff;}
-#caseAnimation{position:absolute;top:0;left:0;width:100%;height:100%;display:none;justify-content:center;align-items:center;background:rgba(0,0,0,0.95);}
-#caseCanvas{background:#111;border:2px solid #fff;border-radius:6px;}
-#message{position:absolute;top:20%;width:100%;text-align:center;font-size:32px;font-weight:bold;display:none;}
+  :root{--bg:#000;--fg:#fff;--box:#111}
+  html,body{margin:0;padding:0;height:100%;background:var(--bg);color:var(--fg);
+            font-family:Arial,Helvetica,sans-serif;display:flex;justify-content:center;
+            align-items:center;overflow:hidden;}
+  canvas{background:#111;border:2px solid #fff;border-radius:6px;display:block;}
+  .menu{position:absolute;top:0;left:0;width:100%;height:100%;display:flex;
+        flex-direction:column;justify-content:center;align-items:center;gap:12px;
+        background:rgba(0,0,0,0.85);}
+  .menu button{padding:10px 20px;font-size:18px;border-radius:6px;border:1px solid #fff;
+               background:transparent;color:#fff;cursor:pointer;}
+  .menu .points{margin-top:10px;font-size:16px;}
+  #skinSelect{margin-top:10px;padding:5px;font-size:16px;border-radius:6px;
+              border:1px solid #fff;background:#000;color:#fff;}
+  #caseAnimation{position:absolute;top:0;left:0;width:100%;height:100%;display:none;
+                 justify-content:center;align-items:center;background:rgba(0,0,0,0.95);
+                 flex-direction:column;}
+  #caseCanvas{background:#111;border:2px solid #fff;border-radius:6px;}
+  #caseText{font-size:32px;margin-bottom:20px;font-weight:bold;}
 </style>
 </head>
 <body>
@@ -25,18 +33,17 @@ canvas{background:#111;border:2px solid #fff;border-radius:6px;display:block;}
   <div class="points" id="pointsDisplay">Points: 0</div>
   <label for="skinSelect" class="points">Select Skin:</label>
   <select id="skinSelect"></select>
-  <button id="saveBtn">Generate Save Code</button>
-  <button id="loadBtn">Load Save Code</button>
 </div>
 
 <div id="caseAnimation">
+  <div id="caseText"></div>
   <canvas id="caseCanvas" width="400" height="100"></canvas>
 </div>
-<div id="message"></div>
 
 <script>
 (() => {
-const canvas=document.getElementById('game'), ctx=canvas.getContext('2d');
+const canvas=document.getElementById('game');
+const ctx=canvas.getContext('2d');
 const menu=document.getElementById('menu');
 const startBtn=document.getElementById('startBtn');
 const casesBtn=document.getElementById('casesBtn');
@@ -45,93 +52,195 @@ const skinSelect=document.getElementById('skinSelect');
 const caseOverlay=document.getElementById('caseAnimation');
 const caseCanvas=document.getElementById('caseCanvas');
 const caseCtx=caseCanvas.getContext('2d');
-const messageEl=document.getElementById('message');
+const caseText=document.getElementById('caseText');
 
 const CELL=15, COLS=canvas.width/CELL, ROWS=canvas.height/CELL;
 const MOVE_INTERVAL=120;
 
 let snake=[], dir={x:1,y:0}, nextDir={x:1,y:0};
 let food={x:0,y:0,color:'red',moving:false,dir:1};
-let timer, running=false, points=0;
+let timer, running=false, score=0, points=0;
 let obstacles=[], invincible=false, invTimer=0;
 let currentSkin='white';
 let ownedSkins=['white'];
 const colors=['red','green','blue','yellow','cyan','magenta'];
 const rareColors=['orange','purple','lime','pink','gold'];
 
+// --- Load saved game ---
+if(localStorage.getItem('snakeGame')){
+  const saved=JSON.parse(localStorage.getItem('snakeGame'));
+  points=saved.points||0;
+  ownedSkins=saved.ownedSkins||['white'];
+  currentSkin=saved.currentSkin||'white';
+}
+
+// --- Utility functions ---
 function randPos(){ return {x:Math.floor(Math.random()*COLS),y:Math.floor(Math.random()*ROWS)}; }
+
 function placeFood(){
-  let p; do{p=randPos();}while(snake.some(s=>s.x===p.x && s.y===p.y)||obstacles.some(o=>o.x===p.x&&o.y===p.y));
+  let p;
+  do { p=randPos(); } while(snake.some(s=>s.x===p.x && s.y===p.y) || obstacles.some(o=>o.x===p.x && o.y===p.y));
   food={...p,color:colors[Math.floor(Math.random()*colors.length)],moving:Math.random()<0.2,dir:Math.random()<0.5?1:-1};
 }
-function placeObstacles(count=5){obstacles=[];for(let i=0;i<count;i++){let p;do{p=randPos();}while(snake.some(s=>s.x===p.x && s.y===p.y)||obstacles.some(o=>o.x===p.x&&o.y===p.y));obstacles.push(p);}}
 
-function startGame(){
-  snake=[{x:10,y:10,color:currentSkin},{x:9,y:10,color:'#555'},{x:8,y:10,color:'#333'}];
-  dir={x:1,y:0}; nextDir=dir; invincible=false; invTimer=0;
-  obstacles=[]; placeObstacles(); placeFood();
-  running=true; if(timer) clearInterval(timer);
-  timer=setInterval(tick,MOVE_INTERVAL); draw(); menu.style.display='none';
+function placeObstacles(count=5){
+  obstacles=[];
+  for(let i=0;i<count;i++){
+    let p;
+    do{p=randPos();}while(snake.some(s=>s.x===p.x && s.y===p.y)||obstacles.some(o=>o.x===p.x&&o.y===p.y));
+    obstacles.push(p);
+  }
 }
 
-function gameOver(){running=false;if(timer){clearInterval(timer);timer=null;}menu.style.display='flex';}
+// --- Game functions ---
+function startGame(){
+  snake=[{x:10,y:10,color:currentSkin},{x:9,y:10,color:'#555'},{x:8,y:10,color:'#333'}];
+  dir={x:1,y:0}; nextDir=dir;
+  score=0; invincible=false; invTimer=0;
+  obstacles=[]; placeObstacles(); placeFood();
+  running=true;
+  if(timer) clearInterval(timer);
+  timer=setInterval(tick,MOVE_INTERVAL);
+  draw();
+  menu.style.display='none';
+}
 
+function gameOver(){
+  running=false;
+  if(timer){ clearInterval(timer); timer=null; }
+  ctx.fillStyle='rgba(255,255,255,0.1)';
+  ctx.fillRect(0,0,canvas.width,canvas.height);
+  menu.style.display='flex';
+  saveGame();
+}
+
+// --- Tick / game loop ---
 function tick(){
   if((nextDir.x!==-dir.x||nextDir.y!==-dir.y)||snake.length===1) dir=nextDir;
   const head={x:snake[0].x+dir.x,y:snake[0].y+dir.y,color:snake[0].color};
-  if(head.x<0||head.x>=COLS||head.y<0||head.y>=ROWS){gameOver();return;}
-  if(snake.some(s=>s.x===head.x && s.y===head.y)&&!invincible){gameOver();return;}
-  if(obstacles.some(o=>o.x===head.x && o.y===head.y)&&!invincible){gameOver();return;}
+
+  if(head.x < 0 || head.x >= COLS || head.y < 0 || head.y >= ROWS){ gameOver(); return; }
+  if(snake.some(s=>s.x===head.x && s.y===head.y) && !invincible){ gameOver(); return; }
+  if(obstacles.some(o=>o.x===head.x && o.y===head.y) && !invincible){ gameOver(); return; }
+
   snake.unshift(head);
-  if(food.moving){food.x+=food.dir;if(food.x<0||food.x>=COLS)food.dir*=-1;}
-  if(head.x===food.x && head.y===food.y){points+=10;if(head.color===food.color){} else points=Math.max(0,points-5);snake.pop();placeFood();updatePoints();}
-  else snake.pop();
-  if(invincible){invTimer--;if(invTimer<=0)invincible=false;}
+
+  if(food.moving){ food.x+=food.dir; if(food.x<0||food.x>=COLS) food.dir*=-1; }
+
+  if(head.x===food.x && head.y===food.y){
+    points += 10;
+    if(head.color===food.color){ score += 10; /* snake grows automatically */ }
+    else{ score = Math.max(0,score-5); points = Math.max(0,points-5); snake.pop(); }
+    if(Math.random()<0.1){ invincible=true; invTimer=50; }
+    placeFood(); updatePoints();
+  } else snake.pop();
+
+  if(invincible){ invTimer--; if(invTimer<=0) invincible=false; }
+
   draw();
 }
 
+// --- Draw function ---
 function draw(){
   ctx.fillStyle='#000'; ctx.fillRect(0,0,canvas.width,canvas.height);
   ctx.fillStyle='#555'; obstacles.forEach(o=>ctx.fillRect(o.x*CELL+2,o.y*CELL+2,CELL-4,CELL-4));
-  ctx.fillStyle=invincible?'gold':food.color; ctx.fillRect(food.x*CELL+2,food.y*CELL+2,CELL-4,CELL-4);
-  for(let i=0;i<snake.length;i++){const s=snake[i];ctx.fillStyle=i===0?currentSkin:`rgb(${220-i*10},${220-i*10},${220-i*10})`;ctx.fillRect(s.x*CELL+1,s.y*CELL+1,CELL-2,CELL-2);}
-  ctx.fillStyle='white'; ctx.font='16px Arial'; ctx.fillText('Points: '+points,10,20);
+  ctx.fillStyle=invincible?'gold':food.color;
+  ctx.fillRect(food.x*CELL+2,food.y*CELL+2,CELL-4,CELL-4);
+  for(let i=0;i<snake.length;i++){
+    const s=snake[i];
+    ctx.fillStyle=i===0?currentSkin:`rgb(${220-i*10},${220-i*10},${220-i*10})`;
+    ctx.fillRect(s.x*CELL+1,s.y*CELL+1,CELL-2,CELL-2);
+  }
+  ctx.fillStyle='white';
+  ctx.font='16px Arial';
+  ctx.fillText('Points: '+points,10,20);
 }
 
-function updatePoints(){pointsDisplay.textContent='Points: '+points; updateSkinSelect();}
-function updateSkinSelect(){skinSelect.innerHTML='';ownedSkins.forEach(skin=>{const opt=document.createElement('option');opt.value=skin;opt.textContent=skin.charAt(0).toUpperCase()+skin.slice(1);if(skin===currentSkin)opt.selected=true;skinSelect.appendChild(opt);});}
-skinSelect.addEventListener('change',(e)=>{currentSkin=e.target.value;draw();});
+// --- Points & skin UI ---
+function updatePoints(){ 
+  pointsDisplay.textContent='Points: '+points; 
+  updateSkinSelect();
+}
 
-startBtn.addEventListener('click',()=>{startGame();});
+function updateSkinSelect(){
+  skinSelect.innerHTML='';
+  ownedSkins.forEach(skin=>{
+    const opt=document.createElement('option');
+    opt.value=skin;
+    opt.textContent=skin.charAt(0).toUpperCase()+skin.slice(1);
+    if(skin===currentSkin) opt.selected=true;
+    skinSelect.appendChild(opt);
+  });
+}
+
+skinSelect.addEventListener('change',(e)=>{
+  currentSkin=e.target.value;
+  draw();
+});
+
+// --- Controls ---
+window.addEventListener('keydown',(e)=>{
+  if(!running) return;
+  const k=e.key;
+  if(k==='ArrowUp'||k==='w'||k==='W') nextDir={x:0,y:-1};
+  else if(k==='ArrowDown'||k==='s'||k==='S') nextDir={x:0,y:1};
+  else if(k==='ArrowLeft'||k==='a'||k==='A') nextDir={x:-1,y:0};
+  else if(k==='ArrowRight'||k==='d'||k==='D') nextDir={x:1,y:0};
+});
+
+canvas.addEventListener('click',()=>{ canvas.focus(); });
+
+// --- Save / Load ---
+function saveGame(){
+  localStorage.setItem('snakeGame',JSON.stringify({
+    points, ownedSkins, currentSkin
+  }));
+}
+
+// --- Event listeners ---
+startBtn.addEventListener('click',()=>{ startGame(); });
 
 casesBtn.addEventListener('click',()=>{
-  if(points<5){alert("Not enough points! Each case costs 5."); return;}
+  if(points<5){ alert("Not enough points! Each case costs 5."); return; }
   points-=5; updatePoints();
-  const roll=Math.random(); let finalSkin;
+
+  // Decide skin
+  const roll=Math.random();
+  let finalSkin;
   if(roll<0.6) finalSkin=colors[Math.floor(Math.random()*colors.length)];
   else if(roll<0.95) finalSkin=rareColors[Math.floor(Math.random()*rareColors.length)];
   else finalSkin='gold';
   ownedSkins.push(finalSkin);
 
-  // Case animation
+  // Show case animation
   caseOverlay.style.display='flex';
-  messageEl.style.display='none';
+  caseText.textContent=''; // clear text before animation
   const scrollSkins=[...colors,...rareColors,'gold','red','green','blue','yellow'];
-  let offset=0,speed=20,frames=0;
+  let offset=0, speed=20, frames=0;
+
   function animateCase(){
     frames++;
-    caseCtx.fillStyle='#111'; caseCtx.fillRect(0,0,caseCanvas.width,caseCanvas.height);
+    caseCtx.fillStyle='#111';
+    caseCtx.fillRect(0,0,caseCanvas.width,caseCanvas.height);
+
     for(let i=0;i<scrollSkins.length;i++){
       const x=(i*80-offset+caseCanvas.width/2)%(scrollSkins.length*80)-80;
-      caseCtx.fillStyle=scrollSkins[i]; caseCtx.fillRect(x,20,70,60);
+      caseCtx.fillStyle=scrollSkins[i];
+      caseCtx.fillRect(x,20,70,60);
     }
-    offset+=speed; if(frames>100) speed*=0.9;
+
+    offset+=speed;
+    if(frames>100){ speed*=0.9; }
     if(speed<0.5){
-      caseOverlay.style.display='none';
-      currentSkin=finalSkin; updatePoints();
-      // Show colored message above menu before returning
-      messageEl.style.color=finalSkin; messageEl.textContent='You got: '+finalSkin.toUpperCase(); messageEl.style.display='block';
-      setTimeout(()=>{messageEl.style.display='none';},2000);
+      // Stop animation
+      caseText.textContent=finalSkin.toUpperCase();
+      caseText.style.color=finalSkin;
+      setTimeout(()=>{
+        caseOverlay.style.display='none';
+        currentSkin=finalSkin;
+        updatePoints();
+        saveGame();
+      }, 1500);
       return;
     }
     requestAnimationFrame(animateCase);
@@ -139,20 +248,7 @@ casesBtn.addEventListener('click',()=>{
   animateCase();
 });
 
-// Save/load
-function generateSaveCode(){const data={points, currentSkin, ownedSkins};const code=btoa(JSON.stringify(data));prompt("Your save code:",code);}
-function loadSaveCode(){const code=prompt("Paste your save code:");if(!code)return;try{const data=JSON.parse(atob(code));points=data.points||0;currentSkin=data.currentSkin||'white';ownedSkins=data.ownedSkins||['white'];updatePoints();alert("Game loaded!");}catch(e){alert("Invalid save code!");}}
-document.getElementById('saveBtn').addEventListener('click',generateSaveCode);
-document.getElementById('loadBtn').addEventListener('click',loadSaveCode);
-
-window.addEventListener('keydown',(e)=>{
-  if(!running) return;
-  if(e.key==='ArrowUp'||e.key==='w'||e.key==='W') nextDir={x:0,y:-1};
-  else if(e.key==='ArrowDown'||e.key==='s'||e.key==='S') nextDir={x:0,y:1};
-  else if(e.key==='ArrowLeft'||e.key==='a'||e.key==='A') nextDir={x:-1,y:0};
-  else if(e.key==='ArrowRight'||e.key==='d'||e.key==='D') nextDir={x:1,y:0};
-});
-canvas.addEventListener('click',()=>{canvas.focus();});
+// --- Initialize ---
 updatePoints();
 })();
 </script>
