--- a/fighting.html
+++ b/fighting.html
@@ -4,7 +4,7 @@
 <meta charset="utf-8">
 <title>Color-Chaser Snake — Chromebook</title>
 <style>
-  :root{--bg:#000;--fg:#fff;--box:#111}
+  :root{--bg:#000;--fg:#fff;}
   html,body{margin:0;padding:0;height:100%;background:var(--bg);color:var(--fg);font-family:Arial,Helvetica,sans-serif;display:flex;justify-content:center;align-items:center;overflow:hidden;}
   canvas{background:#111;border:2px solid #fff;border-radius:6px;display:block;}
   .menu{position:absolute;top:0;left:0;width:100%;height:100%;display:flex;flex-direction:column;justify-content:center;align-items:center;gap:12px;background:rgba(0,0,0,0.85);}
@@ -13,7 +13,7 @@
   #skinSelect{margin-top:10px;padding:5px;font-size:16px;border-radius:6px;border:1px solid #fff;background:#000;color:#fff;}
   #caseAnimation{position:absolute;top:0;left:0;width:100%;height:100%;display:none;justify-content:center;align-items:center;background:rgba(0,0,0,0.95);}
   #caseCanvas{background:#111;border:2px solid #fff;border-radius:6px;}
-  #skinMessage{position:absolute;top:40%;width:100%;text-align:center;font-size:32px;font-weight:bold;display:none;}
+  #caseResult{position:absolute;top:30%;width:100%;text-align:center;font-size:32px;font-weight:bold;display:none;}
 </style>
 </head>
 <body>
@@ -29,28 +29,28 @@
 
 <div id="caseAnimation">
   <canvas id="caseCanvas" width="400" height="100"></canvas>
-  <div id="skinMessage"></div>
+  <div id="caseResult"></div>
 </div>
 
 <script>
 (() => {
-const canvas=document.getElementById('game');
-const ctx=canvas.getContext('2d');
-const menu=document.getElementById('menu');
-const startBtn=document.getElementById('startBtn');
-const casesBtn=document.getElementById('casesBtn');
-const pointsDisplay=document.getElementById('pointsDisplay');
-const skinSelect=document.getElementById('skinSelect');
-const caseOverlay=document.getElementById('caseAnimation');
-const caseCanvas=document.getElementById('caseCanvas');
-const caseCtx=caseCanvas.getContext('2d');
-const skinMessage=document.getElementById('skinMessage');
+const canvas = document.getElementById('game');
+const ctx = canvas.getContext('2d');
+const menu = document.getElementById('menu');
+const startBtn = document.getElementById('startBtn');
+const casesBtn = document.getElementById('casesBtn');
+const pointsDisplay = document.getElementById('pointsDisplay');
+const skinSelect = document.getElementById('skinSelect');
+const caseOverlay = document.getElementById('caseAnimation');
+const caseCanvas = document.getElementById('caseCanvas');
+const caseCtx = caseCanvas.getContext('2d');
+const caseResult = document.getElementById('caseResult');
 
-const CELL=15, COLS=canvas.width/CELL, ROWS=canvas.height/CELL;
-const MOVE_INTERVAL=120;
+const CELL = 15, COLS = canvas.width / CELL, ROWS = canvas.height / CELL;
+const MOVE_INTERVAL = 120;
 
-let snake=[], dir={x:1,y:0}, nextDir={x:1,y:0};
-let food={x:0,y:0,color:'red',moving:false,dir:1};
+let snake = [], dir = {x:1,y:0}, nextDir = {x:1,y:0};
+let food = {x:0, y:0, color:'red'};
 let timer, running=false, score=0, points=0;
 let obstacles=[], invincible=false, invTimer=0;
 let currentSkin='white';
@@ -58,57 +58,45 @@ let ownedSkins=['white'];
 const colors=['red','green','blue','yellow','cyan','magenta'];
 const rareColors=['orange','purple','lime','pink','gold'];
 
-// Load saved game
-if(localStorage.getItem('snakeSave')){
-  const save=JSON.parse(localStorage.getItem('snakeSave'));
-  points=save.points||0;
-  currentSkin=save.currentSkin||'white';
-  ownedSkins=save.ownedSkins||['white'];
-}
-
-function saveGame(){
-  localStorage.setItem('snakeSave', JSON.stringify({points,currentSkin,ownedSkins}));
-}
-
-function randPos(){ return {x:Math.floor(Math.random()*COLS),y:Math.floor(Math.random()*ROWS)}; }
+function randPos(){ return {x:Math.floor(Math.random()*COLS), y:Math.floor(Math.random()*ROWS)}; }
 
 function placeFood(){
   let p;
-  do { p=randPos(); } while(snake.some(s=>s.x===p.x && s.y===p.y) || obstacles.some(o=>o.x===p.x && o.y===p.y));
-  food={...p,color:colors[Math.floor(Math.random()*colors.length)],moving:Math.random()<0.2,dir:Math.random()<0.5?1:-1};
+  do { p = randPos(); } while(snake.some(s=>s.x===p.x && s.y===p.y) || obstacles.some(o=>o.x===p.x && o.y===p.y));
+  food = {...p, color: colors[Math.floor(Math.random()*colors.length)]};
 }
 
 function placeObstacles(count=5){
   obstacles=[];
   for(let i=0;i<count;i++){
     let p;
-    do{p=randPos();}while(snake.some(s=>s.x===p.x && s.y===p.y)||obstacles.some(o=>o.x===p.x&&o.y===p.y));
+    do { p = randPos(); } while(snake.some(s=>s.x===p.x && s.y===p.y) || obstacles.some(o=>o.x===p.x && o.y===p.y));
     obstacles.push(p);
   }
 }
 
 function startGame(){
-  snake=[{x:10,y:10,color:currentSkin},{x:9,y:10,color:'#555'},{x:8,y:10,color:'#333'}];
-  dir={x:1,y:0}; nextDir=dir;
+  snake = [{x:10,y:10,color:currentSkin},{x:9,y:10,color:'#555'},{x:8,y:10,color:'#333'}];
+  dir = {x:1,y:0}; nextDir=dir;
   score=0; invincible=false; invTimer=0;
   obstacles=[]; placeObstacles(); placeFood();
-  running=true;
+  running = true;
   if(timer) clearInterval(timer);
-  timer=setInterval(tick,MOVE_INTERVAL);
+  timer = setInterval(tick, MOVE_INTERVAL);
   draw();
-  menu.style.display='none';
+  menu.style.display = 'none';
+  canvas.focus();
 }
 
 function gameOver(){
   running=false;
   if(timer){ clearInterval(timer); timer=null; }
   menu.style.display='flex';
-  saveGame();
 }
 
 function tick(){
   if((nextDir.x!==-dir.x||nextDir.y!==-dir.y)||snake.length===1) dir=nextDir;
-  const head={x:snake[0].x+dir.x,y:snake[0].y+dir.y,color:snake[0].color};
+  const head={x:snake[0].x+dir.x, y:snake[0].y+dir.y, color:snake[0].color};
 
   if(head.x<0 || head.x>=COLS || head.y<0 || head.y>=ROWS){ gameOver(); return; }
   if(snake.some(s=>s.x===head.x && s.y===head.y) && !invincible){ gameOver(); return; }
@@ -116,21 +104,10 @@ function tick(){
 
   snake.unshift(head);
 
-  if(food.moving){ food.x+=food.dir; if(food.x<0||food.x>=COLS) food.dir*=-1; }
-
   if(head.x===food.x && head.y===food.y){
     points += 10;
-    if(head.color===food.color){
-      score +=10;
-      snake[0].color=food.color;
-      // grow: do not pop tail
-    } else {
-      score=Math.max(0,score-5);
-      points=Math.max(0,points-5);
-      snake.pop(); // wrong color, no growth
-    }
-    if(Math.random()<0.1){ invincible=true; invTimer=50; }
-    placeFood(); updatePoints(); saveGame();
+    if(head.color===food.color){ score+=10; head.color=food.color; }
+    placeFood(); updatePoints();
   } else snake.pop();
 
   if(invincible){ invTimer--; if(invTimer<=0) invincible=false; }
@@ -140,7 +117,7 @@ function tick(){
 function draw(){
   ctx.fillStyle='#000'; ctx.fillRect(0,0,canvas.width,canvas.height);
   ctx.fillStyle='#555'; obstacles.forEach(o=>ctx.fillRect(o.x*CELL+2,o.y*CELL+2,CELL-4,CELL-4));
-  ctx.fillStyle=invincible?'gold':food.color; ctx.fillRect(food.x*CELL+2,food.y*CELL+2,CELL-4,CELL-4);
+  ctx.fillStyle=food.color; ctx.fillRect(food.x*CELL+2,food.y*CELL+2,CELL-4,CELL-4);
   for(let i=0;i<snake.length;i++){
     const s=snake[i];
     ctx.fillStyle=i===0?currentSkin:`rgb(${220-i*10},${220-i*10},${220-i*10})`;
@@ -157,60 +134,57 @@ function updatePoints(){
 function updateSkinSelect(){
   skinSelect.innerHTML='';
   ownedSkins.forEach(skin=>{
-    const opt=document.createElement('option');
-    opt.value=skin; opt.textContent=skin.charAt(0).toUpperCase()+skin.slice(1);
+    const opt = document.createElement('option');
+    opt.value = skin; opt.textContent = skin.charAt(0).toUpperCase()+skin.slice(1);
     if(skin===currentSkin) opt.selected=true;
     skinSelect.appendChild(opt);
   });
 }
 
-skinSelect.addEventListener('change',e=>{
-  currentSkin=e.target.value;
+skinSelect.addEventListener('change', e=>{
+  currentSkin = e.target.value;
   draw();
 });
 
-startBtn.addEventListener('click',()=>{ startGame(); });
+startBtn.addEventListener('click', startGame);
 
 casesBtn.addEventListener('click',()=>{
-  if(points<5){ alert("Not enough points! Each case costs 5."); return; }
-  points-=5; updatePoints();
+  if(points<5){ alert("Not enough points!"); return; }
+  points -=5; updatePoints();
 
-  // Decide skin
-  const roll=Math.random();
+  const roll = Math.random();
   let finalSkin;
   if(roll<0.6) finalSkin=colors[Math.floor(Math.random()*colors.length)];
   else if(roll<0.95) finalSkin=rareColors[Math.floor(Math.random()*rareColors.length)];
   else finalSkin='gold';
   ownedSkins.push(finalSkin);
 
-  // Case animation
+  // Show case animation
   caseOverlay.style.display='flex';
-  const scrollSkins=[...colors,...rareColors,'gold','red','green','blue','yellow'];
+  caseResult.style.display='none';
+  const scrollSkins = [...colors,...rareColors,'gold','red','green','blue','yellow'];
   let offset=0, speed=20, frames=0;
 
   function animateCase(){
     frames++;
     caseCtx.fillStyle='#111'; caseCtx.fillRect(0,0,caseCanvas.width,caseCanvas.height);
-
     for(let i=0;i<scrollSkins.length;i++){
-      const x=(i*80-offset+caseCanvas.width/2)%(scrollSkins.length*80)-80;
-      caseCtx.fillStyle=scrollSkins[i]; caseCtx.fillRect(x,20,70,60);
+      const x = (i*80 - offset + caseCanvas.width/2) % (scrollSkins.length*80) - 80;
+      caseCtx.fillStyle = scrollSkins[i]; caseCtx.fillRect(x,20,70,60);
     }
-
-    offset+=speed;
+    offset += speed;
     if(frames>100) speed*=0.9;
-
     if(speed<0.5){
-      // show skin text
-      skinMessage.style.color=finalSkin;
-      skinMessage.textContent='You got: '+finalSkin.charAt(0).toUpperCase()+finalSkin.slice(1);
-      skinMessage.style.display='block';
+      // show the result in big text
+      caseResult.style.color = finalSkin;
+      caseResult.textContent = 'You got: ' + finalSkin.toUpperCase();
+      caseResult.style.display='block';
       setTimeout(()=>{
-        skinMessage.style.display='none';
-        currentSkin=finalSkin; updatePoints();
         caseOverlay.style.display='none';
-        saveGame();
-      },1500);
+        updatePoints();
+      }, 1500);
+      currentSkin = finalSkin;
+      updatePoints();
       return;
     }
     requestAnimationFrame(animateCase);
@@ -218,17 +192,19 @@ casesBtn.addEventListener('click',()=>{
   animateCase();
 });
 
-window.addEventListener('keydown',e=>{
+updatePoints();
+
+window.addEventListener('keydown', e=>{
   if(!running) return;
-  if(e.key==='ArrowUp'||e.key==='w'||e.key==='W') nextDir={x:0,y:-1};
-  else if(e.key==='ArrowDown'||e.key==='s'||e.key==='S') nextDir={x:0,y:1};
-  else if(e.key==='ArrowLeft'||e.key==='a'||e.key==='A') nextDir={x:-1,y:0};
-  else if(e.key==='ArrowRight'||e.key==='d'||e.key==='D') nextDir={x:1,y:0};
+  const k=e.key;
+  if(k==='ArrowUp'||k==='w'||k==='W') nextDir={x:0,y:-1};
+  else if(k==='ArrowDown'||k==='s'||k==='S') nextDir={x:0,y:1};
+  else if(k==='ArrowLeft'||k==='a'||k==='A') nextDir={x:-1,y:0};
+  else if(k==='ArrowRight'||k==='d'||k==='D') nextDir={x:1,y:0};
 });
 
-canvas.addEventListener('click',()=>{ canvas.focus(); });
+canvas.addEventListener('click', ()=> canvas.focus());
 
-updatePoints();
 })();
 </script>
 </body>
